// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText default 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText should accept disabled 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  disabled={true}
  type="text"
/>
`;

exports[`InputText should accept readOnly 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  readOnly={true}
  type="text"
/>
`;

exports[`InputText should accept required 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  required={true}
  type="text"
/>
`;

exports[`InputText with a placeholder 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  placeholder="I am a placeholder"
  type="text"
/>
`;

exports[`InputText with a success validation 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #64518A;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText with a value 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  type="text"
  value="Some value"
/>
`;

exports[`InputText with a warning validation 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #E8E5FF;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText with an error validation 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #CC1F36;
  background-color: #FFF2F4;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText with an info validation 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  color: #E8E5FF;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText with aria-describedby 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  aria-describedby="some-id"
  className="c0"
  type="text"
/>
`;

exports[`InputText with name and id 1`] = `
.c0 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

<input
  className="c0"
  id="Bobby"
  name="Bob"
  type="text"
/>
`;
